Center alignment issue for More and Cart buttons #12 has resolved

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ body {
 }
 
 #cart {
-    padding-top: 17px;
+    padding-top: 19px;
     padding-left: 40px;
 }
 
